# MergeSort

./: CMakeLists.txt  README.md
cmake/: gtest.cmake
src/: MergeSort.cpp
test/: MSTest.cpp
